worked on evaluate method, not quite finished but getting there